// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxWidth renders 0 1`] = `
Array [
  .c0 {
  box-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`boxWidth renders function 1`] = `
Array [
  .c0 {
  box-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`boxWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  box-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`boxWidth renders negative number 1`] = `
Array [
  .c0 {
  box-width: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    box-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    box-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxWidth renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    box-width: July;
  }
}

@media April {
  .c0 {
    box-width: August;
  }
}

@media January {
  .c0 {
    box-width: September;
  }
}

@media April {
  .c0 {
    box-width: November;
  }
}

@media June {
  .c0 {
    box-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    box-width: July;
  }
}

@media April {
  .c0 {
    box-width: August;
  }
}

@media January {
  .c0 {
    box-width: September;
  }
}

@media April {
  .c0 {
    box-width: November;
  }
}

@media June {
  .c0 {
    box-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-width: January;
  }
}

@media April {
  .c0 {
    box-width: December;
  }
}

@media January {
  .c0 {
    box-width: April;
  }
}

@media April {
  .c0 {
    box-width: May;
  }
}

@media June {
  .c0 {
    box-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-width: January;
  }
}

@media April {
  .c0 {
    box-width: December;
  }
}

@media January {
  .c0 {
    box-width: April;
  }
}

@media April {
  .c0 {
    box-width: May;
  }
}

@media June {
  .c0 {
    box-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxWidth renders postitive number 1`] = `
Array [
  .c0 {
  box-width: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxWidth renders string 1`] = `
Array [
  .c0 {
  box-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`boxWidth renders valid theme path 1`] = `
Array [
  .c0 {
  box-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
